# wowclassicdotplus

./: .gitignore  README.md
backend/: .dockerignore  .env  Dockerfile  README.md  add_pins.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.sh
backend/app/: database.py  main.py  models.py  test.py
backend/app/routers/: admin.py  auth.py  items.py  pins.py  survey.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  index.css  index.js
frontend/src/components/: CustomMap.js  CustomMap2.css  CustomMap2.js  Dashboard.js  DiscordCallback.jsx  FieldBox.js  LandingPage.css  LandingPage.js  Navbar.js  NavbarDiscordLogin.jsx  PinForm.js  PinList.js  SurveyForm.js  SurveyPage.js  SurveyResults.js  SurveySchema.js  SurveySummary.js  UserContext.jsx  polygons.js  theme.js
frontend/src/components/map/: CustomMap.jsx
frontend/src/components/survey/: SurveyForm.js  SurveyResults.js
